--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 # for syntax see https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners#codeowners-syntax
 
 # base rule, tket team is codeowner for whole repo
-* @CQCL/tket2
+* @quantinuum/tket2
 
 # Add specific rules below.
 # Lower the rule, higher the precedence
