--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ default-members = ["tket", "tket-qsystem"]
 [workspace.package]
 rust-version = "1.85"
 edition = "2021"
-homepage = "https://github.com/CQCL/tket2"
-repository = "https://github.com/CQCL/tket2"
+homepage = "https://github.com/quantinuum/tket2"
+repository = "https://github.com/quantinuum/tket2"
 license = "Apache-2.0"
 
 [workspace.lints.rust]
@@ -39,12 +39,12 @@ large_enum_variant = "allow"
 [patch.crates-io]
 
 # Uncomment to use unreleased versions of hugr
-# hugr = { git = "https://github.com/CQCL/hugr", "branch" = "ts/ba-copy-discard" }
-# hugr-core = { git = "https://github.com/CQCL/hugr", "branch" = "ts/ba-copy-discard" }
-# hugr-cli = { git = "https://github.com/CQCL/hugr", "branch" = "ts/ba-copy-discard" }
-# hugr-passes = { git = "https://github.com/CQCL/hugr", "branch" = "ts/ba-copy-discard" }
-# hugr-llvm = { git = "https://github.com/CQCL/hugr", "branch" = "ts/ba-copy-discard" }
-# portgraph = { git = "https://github.com/CQCL/portgraph", rev = "68b96ac737e0c285d8c543b2d74a7aa80a18202c" }
+# hugr = { git = "https://github.com/quantinuum/hugr", "branch" = "ts/ba-copy-discard" }
+# hugr-core = { git = "https://github.com/quantinuum/hugr", "branch" = "ts/ba-copy-discard" }
+# hugr-cli = { git = "https://github.com/quantinuum/hugr", "branch" = "ts/ba-copy-discard" }
+# hugr-passes = { git = "https://github.com/quantinuum/hugr", "branch" = "ts/ba-copy-discard" }
+# hugr-llvm = { git = "https://github.com/quantinuum/hugr", "branch" = "ts/ba-copy-discard" }
+# portgraph = { git = "https://github.com/quantinuum/portgraph", rev = "68b96ac737e0c285d8c543b2d74a7aa80a18202c" }
 
 [workspace.dependencies]
 
