--- a/tket-py/pyproject.toml
+++ b/tket-py/pyproject.toml
@@ -54,6 +54,7 @@ docs = [
     "myst-nb>=1.1.2",
     "sphinx-copybutton>=0.5.2",
     "sphinx-basic-ng>=1.0.0b2",
+    "sphinx-autodoc-typehints>=3.0.1",
 ]
 
 [tool.maturin]
