ci: Fix failing pytket test on release-check lowest-deps case

--- a/.github/workflows/release-checks.yml
+++ b/.github/workflows/release-checks.yml
@@ -72,4 +72,4 @@ jobs:
       - name: Lint with ruff
         run: uv run --no-sync ruff check tket-py
       - name: Run python tests
-        run: uv run --no-sync pytest tket-py
+        run: uv run --no-sync pytest tket-py --verbose
