Updated rsgridsynth to new crates.io version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,7 +98,7 @@ cool_asserts = "2.0.4"
 zstd = "0.13.3"
 anyhow = "1.0.100"
 num-rational = "0.4.2"
-rsgridsynth = { git = "https://github.com/qiskit-community/rsgridsynth.git"} # not stable: (TO DO: fork?)
+rsgridsynth = "0.2.0"
 
 [profile.release.package.tket-py]
 # Some configurations to reduce the size of tket wheels
