--- a/.github/workflows/python-wheels.yml
+++ b/.github/workflows/python-wheels.yml
@@ -85,10 +85,16 @@ jobs:
           #  target: aarch64-unknown-linux-musl
           #  manylinux: "musllinux_1_2"
           - runner: ubuntu-24.04
+            # NOTE: We use the sightly older Ubuntu 22.04 runner to force a
+            # lower GLIBC version in the tket-c-api build.
+            #
+            # This should no longer be necessary once we fix the tket-c-api build.
+            # <https://github.com/Quantinuum/tket2/issues/1272>
             target: x86_64-unknown-linux-gnu
-            manylinux: "manylinux2014"
+            manylinux: "manylinux_2_39"
             test-wheels: true
           - runner: ubuntu-24.04
+            # NOTE: See comment above about Ubuntu 22.04 runner
             target: x86_64-unknown-linux-musl
             manylinux: "musllinux_1_2"
           # ---------------- Mac
