drive-by: Enable iter-hash-types lint

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,9 @@ missing_docs = "warn"
 [workspace.lints.clippy]
 allow_attributes = "warn"
 
+# TODO: Fix warnings of this lint and set to "warn"
+iter_over_hash_type = "allow"
+
 # TODO: Reduce the size of error types.
 result_large_err = "allow"
 large_enum_variant = "allow"
